[gd_scene load_steps=15 format=3 uid="uid://dkkxvw1uxrmpf"]

[ext_resource type="Texture2D" uid="uid://y2h6btntqetm" path="res://assets/tall_glass.png" id="1_cxl3g"]
[ext_resource type="Script" path="res://coffee/shared/pour.gd" id="1_wbgfq"]
[ext_resource type="Texture2D" uid="uid://cmctk3h8d4vk1" path="res://assets/Assets finalizados/Cafe frio.png" id="2_ma6df"]
[ext_resource type="Shader" path="res://coffee/shared/teste.gdshader" id="3_ygcjs"]
[ext_resource type="Shader" uid="uid://c24q003sbnsyh" path="res://coffee/shared/pouring_milk_shader.tres" id="4_0b2mk"]
[ext_resource type="Texture2D" uid="uid://c63yix1xc48qr" path="res://assets/onda.png" id="5_w8jmp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vgfsk"]
size = Vector2(112, 292)

[sub_resource type="Curve2D" id="Curve2D_gm3to"]
_data = {
"points": PackedVector2Array(181.215, -10.7037, -181.215, 10.7037, 472, 120, -15.7841, -115.204, 15.7841, 115.204, 228, 426)
}
point_count = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w7k0x"]
shader = ExtResource("3_ygcjs")
shader_parameter/strength = 2.0
shader_parameter/sample_power = 3
shader_parameter/is_canvas_group = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_haqf0"]
resource_local_to_scene = true
shader = ExtResource("4_0b2mk")
shader_parameter/Frequency = null
shader_parameter/Imagem = ExtResource("5_w8jmp")

[sub_resource type="Gradient" id="Gradient_6w7ud"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.327719, 0.160897, 0.0650786, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_syi0m"]
gradient = SubResource("Gradient_6w7ud")

[sub_resource type="Gradient" id="Gradient_y5hp6"]
offsets = PackedFloat32Array(0, 0.0974026, 0.88961, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.317155, 0.113741, 0.0804853, 1, 0.317155, 0.113741, 0.0804853, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qt08d"]
gradient = SubResource("Gradient_y5hp6")
width = 64

[node name="Pour" type="Node2D"]
script = ExtResource("1_wbgfq")
min_liquid_poured = 0.2

[node name="Pivot" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(504.325, 392)

[node name="Sprite2D" type="Sprite2D" parent="Pivot"]
position = Vector2(159.675, -160)
texture = ExtResource("2_ma6df")

[node name="OsuSliderArea" type="Area2D" parent="Pivot"]
position = Vector2(-32.325, -272)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/OsuSliderArea"]
position = Vector2(336, 142)
shape = SubResource("RectangleShape2D_vgfsk")

[node name="SpoutPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_gm3to")

[node name="SpoutSlider" type="PathFollow2D" parent="SpoutPath"]
unique_name_in_owner = true
position = Vector2(472, 120)
rotates = false
loop = false

[node name="CanvasGroup" type="CanvasGroup" parent="SpoutPath/SpoutSlider"]
material = SubResource("ShaderMaterial_w7k0x")

[node name="Sprite2D" type="Sprite2D" parent="SpoutPath/SpoutSlider/CanvasGroup"]
texture_filter = 2
material = SubResource("ShaderMaterial_haqf0")
position = Vector2(0, 174)
scale = Vector2(0.087, 355.625)
texture = SubResource("GradientTexture1D_syi0m")
region_rect = Rect2(0, -197.5, 287, 325)

[node name="Copo" type="Sprite2D" parent="."]
position = Vector2(264, 556.313)
scale = Vector2(0.785, 0.374722)
texture = ExtResource("1_cxl3g")

[node name="Polygon2D" type="Polygon2D" parent="Copo"]
clip_children = 1
position = Vector2(-1.72123, -6.17124)
scale = Vector2(0.932013, 1)
color = Color(0, 0, 0, 1)
antialiased = true
polygon = PackedVector2Array(-70.5942, 130.764, -65.127, 146.775, -53.5032, 161.953, 63.6943, 156.616, 77.0214, 144.107, 82.4886, 117.42, 86.5891, 58.7102, 89.3227, -40.0297, 87.9559, -205.486, 11.4145, -210.823, -86.9959, -205.486, -84.2623, -82.7279, -76.0614, 85.3966)

[node name="TextureRect" type="TextureRect" parent="Copo/Polygon2D"]
unique_name_in_owner = true
offset_left = 93.0
offset_top = 163.0
offset_right = 273.0
offset_bottom = 164.0
rotation = 3.14159
scale = Vector2(1, 3.775)
texture = SubResource("GradientTexture1D_qt08d")

[node name="LeftBorder" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(264, 160)

[node name="RightBorder" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(816, 160)

[node name="Next" type="Button" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 896.0
offset_top = 448.0
offset_right = 1089.0
offset_bottom = 575.0
text = "NEXT"

[connection signal="mouse_entered" from="Pivot/OsuSliderArea" to="." method="_on_osu_slider_mouse_entered"]
[connection signal="mouse_exited" from="Pivot/OsuSliderArea" to="." method="_on_osu_slider_mouse_exited"]
[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
